--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
   font-size:10rem;
   font-family: 'Apercu-Bold';
 }
+h1{
+  margin: 0;
+  line-height: auto;
+}
+@media screen and (max-width: 768px) {
+  .logo-right-sided.desktop {
+      font-size: 6rem;
+      font-family: 'Apercu-Bold';
+    }
+  
+}
